[package]
name = "day-06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
# intel-mkl-tool breaks with current anyhow. force exact version (https://github.com/dtolnay/anyhow/issues/207)
anyhow = "=1.0.48"
ndarray = "0.15"
ndarray-linalg = { version = "0.14", features = ["intel-mkl-static"] }
